# MSL-Cli

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.en.md  README.md  custom-android-target.json
.github/docker/: Dockerfile.riscv64-gnu  Dockerfile.riscv64-musl  Dockerfile.riscv64gc-unknown-linux-gnu  Dockerfile.riscv64gc-unknown-linux-musl
.github/workflows/: Build-Android.yml  Build-Apple.yml  Build-Linux.yml  Build-MacOS&iOS.yml  Build-Windows.yml  build(tmp).yml  ci.yml
src/: main.rs  tui.rs
src/config/: mod.rs
src/core/: api.rs  image_engine.rs  mod.rs
src/init/: checker.rs  mod.rs  paths.rs
src/ui/: home.rs  mod.rs
src/ui/components/: banner.rs  mod.rs  sidebar.rs
