[package]
name = "msl-cli"
version = "0.3.9"
edition = "2024"
rust-version = "1.85"
authors = ["Yuyi-Oak <awanye@qq.com>"]
description = "MSL-Cli: A blazing-fast, cross-platform command-line tool inspired by MSL."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/MSLTeam/MSL-Cli"
keywords = ["cli", "rust", "tools", "cross-platform", "msl"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
chrono = "0.4.41"
whoami = "1.6.1"
reqwest = { version = "0.12.23", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
keyring = "3.6.3"
rpassword = "7.4.0"
openssl = "0.10.73"

[[bin]]
name = "msl-cli"
path = "src/main.rs"

[target.'cfg(all(target_arch = "riscv64", target_os = "linux"))'.dependencies.openssl]
default-features = false
features = ["vendored", "v300"]