[package]
name = "MSL-Cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["events"]}
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
color-eyre = "0.6.5"
clap = { version = "4.5.54", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
console = "0.16.2"
ratatui-image = "10.0.2"
image = "0.25.9"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }