[package]
name = "MSL-Cli"
version = "0.2.1"
edition = "2024"

[dependencies]
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["events"]}
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
console = "0.16.2"
ratatui-image = "10.0.2"
image = "0.25.9"
reqwest = { version = "0.13.1", features = ["json", "rustls-native-certs", "query"] }